Bug 165808 - Quickstarter checkbox visible even if the feature is not installed
Summary: Quickstarter checkbox visible even if the feature is not installed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.8.0.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Options-Dialog
  Show dependency treegraph
 
Reported: 2025-03-18 17:17 UTC by Gabor Kelemen (Collabora)
Modified: 2025-03-20 17:31 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the instdir and the General tab (134.88 KB, image/png)
2025-03-18 17:17 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-03-18 17:17:27 UTC
Created attachment 199877 [details]
Screenshot of the instdir and the General tab

When the Quickstarter feature is not installed, the checkbox to enable / disable it is still visible in the General tab.

1. Install LO on Windows, but disable the Quickstarter feature in the installer
2. Go to Options -> General
-> The Quickstarter checkbox is visible, even if the instdir/program/quickstart.exe is missing.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6e8a094a1a1d63ed2684900c5e0c4292f8d833a8
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

This used to work in 24.2, seems to have been broken since 24.8.0 commit:

https://git.libreoffice.org/core/+/b8e393686c4ab6a69b091240065f440eadfff230%5E%21

author	Armin Le Grand (allotropia) <armin.le.grand.extern@allotropia.de>	Mon Jan 15 18:45:03 2024 +0100
committer	Armin Le Grand <Armin.Le.Grand@me.com>	Wed Jan 17 01:56:01 2024 +0100
tree ad8e6f1291887fc677385e28879175052e309874
parent 1a637a07a0fb23f4d4bfac69378caff7ee965737 [diff]

ITEM: Remove suspicious extra-Which in ::Put
Comment 1 Commit Notification 2025-03-19 10:05:44 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/98c8077893044453ca76ad2a34c6d86d9be0c2c7

tdf#165808 fix always visible Quickstarter UI frame

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2025-03-20 17:31:45 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/5d2e0437633fa201b5b9dbec415b249600bec6c7

tdf#165808 fix always visible Quickstarter UI frame

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.