tdf#165808 fix always visible Quickstarter UI frame

Better to check SID_ATTR_QUICKLAUNCHER is set at all with
GetItemIfSet, then with GetItemState, because if
ShutdownIcon::IsQuickstarterInstalled is false we simple disable
the item with rSet.DisableItem( SID_ATTR_QUICKLAUNCHER ); and later
the disabled item is removed from the itemset therefore the original
SfxItemState will be SfxItemState::DEFAULT.

regression from commit: b8e393686c4ab6a69b091240065f440eadfff230

Change-Id: I6ce85798100d93dd3f712abc8ede2087b912b867
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183041
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>
Tested-by: Jenkins
(cherry picked from commit 98c8077893044453ca76ad2a34c6d86d9be0c2c7)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183150
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>